--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.SEND_SMS" />
-    
+
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
@@ -28,6 +28,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+         <service
+            android:name="com.hckthn.watchoutserver.NotificationPusher"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+		     <intent-filter>
+		         <action android:name="android.service.notification.NotificationListenerService" />
+		     </intent-filter>
+        </service>
 
         <service
             android:name="com.hckthn.watchoutserver.WatchLink"
@@ -35,5 +44,4 @@
             android:exported="false" >
         </service>
     </application>
-
 </manifest>
